--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,6 @@
 body {
     font-family: 'Roboto', sans-serif;
     margin: 0;
-    padding: 80px 0 0 0;
     background-color: var(--color-fondo);
     color: var(--color-texto);
     box-sizing: border-box;
@@ -29,6 +28,10 @@ section {
 
 .color-primary{
     color: var(--color-primario);
+}
+
+.bck-primary{
+    background-color: var(--color-primario);
 }
 
 a{
