--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,8 @@ li{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 100%;
+    min-height: 100px;
     top: 0;
     left: 0;
     right: 0;
